lib_LIBRARIES = libemu_8080.a
# -Werror 
libemu_8080_a_SOURCES = emu-8080.c emu-8080.h
libemu_8080_a_CFLAGS = -shared -fpic -Wall  -Wextra  -Walloc-zero  -Walloca -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fno-sanitize=null -fno-sanitize=alignment
#libgettext_la_LDADD =
